--- a/lucky-draw/package.json
+++ b/lucky-draw/package.json
@@ -13,8 +13,10 @@
     "test": "npm run compile && npm run unit"
   },
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
-    "esbuild": "^0.14.14"
+    "@aws-sdk/client-dynamodb": "^3.758.0",
+    "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "esbuild": "^0.14.14",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92",
